metadata/1.0.7/de.md
# Claud CO2 — App Store Connect Metadata

**Version:** 1.0.7  
**Locale:** German  
**Locale code:** `de`

---

## App Information

| Field | Value | Limit | Count |
|---|---|---|---|
| **Name** | Claud CO2 | 30 | 9 |
| **Subtitle** | Deinen CO₂-Fußabdruck tracken | 30 | 30 |
| **Promotional Text** | Lerne Claud kennen — dein Wolken-Maskottchen reagiert auf deinen CO₂-Score. Aktivitäten erfassen, grünere Reisen planen und wetterbewusste Tipps erhalten. | 170 | 130 |

---

## Keywords

```
CO2,Kohlenstoff,Klima,Nachhaltigkeit,Öko,Transport,Gesundheit,Wetter,Tipps,Fußabdruck,Umwelt
```

**Limit:** 100 characters · **Count:** 88

---

## Description

Claud CO2 hilft dir, deinen persönlichen CO₂-Fußabdruck zu verstehen und Tag für Tag zu reduzieren.

Erfasse die Aktivitäten, die zählen: Autofahren, Fliegen, öffentliche Verkehrsmittel, Ernährung, Stromverbrauch, Gehen, Radfahren, Baumpflanzung und Recycling. Sieh, wie sich dein realer CO₂-Verbrauch und deine Kompensation über die Woche mit klaren Diagrammen entwickeln.

**Lerne Claud kennen — dein CO₂-Maskottchen**  
Claud ist eine freundliche Wolke, die deine wöchentliche CO₂-Gesundheit widerspiegelt. Triff grünere Entscheidungen und sieh, wie Claud aufblüht.

**Plane umweltfreundlichere Reisen**  
Vergleiche im integrierten Kartentool Transportoptionen nebeneinander. Routen werden nach CO₂-Auswirkung sortiert — die grünste Option steht immer zuerst. Speichere Reisen direkt in deinem Aktivitätsprotokoll.

**Sync mit Apple Health**  
Importiere automatisch Schritte und Geh-/Laufstrecke aus HealthKit. Verwandle Alltagsbewegung in erfasste Kompensation — ohne extra Aufwand.

**Wetterbewusste Vorschläge**  
Claud prüft lokales Wetter und Luftqualität und empfiehlt Gehen oder Radfahren bei guten Bedingungen — und warnt, wenn Outdoor-Aktivität unratsam ist.

**Intelligente, datenbasierte Tipps**  
Erhalte personalisierte Einblicke aus deinen erfassten Aktivitäten: Nutzungstrends, Hauptemittenten, Kompensationslücken, Ernährungstausch und grünere Alternativen mit echten kg-CO₂-Zahlen.

**Trends über die Zeit**  
Wöchentliche Trends, Verbrauchs- vs. Kompensationsübersichten und deine meistgenutzten Aktivitäten helfen dir, Muster zu erkennen und dich zu verbessern.

Abonnements und Lifetime-Pläne schalten das volle Claud CO2-Erlebnis frei. Starte heute deine Reise zu einem grüneren Lebensstil.

---

## What's New in This Version

**Version 1.0.7**

- Lerne dein neues Maskottchen kennen — Claud reagiert jetzt in Echtzeit auf deinen CO₂-Score
- Wetterbewusste Tipps — Claud prüft lokale Bedingungen und schlägt die beste Zeit zum Gehen, Radfahren oder für den ÖPNV vor
- Intelligentere Aktivitätstipps — datenbasierte Einblicke mit echten CO₂-Zahlen, Nutzungstrends und umsetzbaren Vorschlägen
- Ein klareres, schnelleres Erlebnis — neu gestaltete Karten, flüssigere Navigation und intuitiveres Layout
- Neues Karten-Erlebnis — plane umweltfreundlichere Reisen mit Live-Transportvergleich und CO₂-Schätzungen auf der Karte

---

## URLs

| Field | URL |
|---|---|
| **Support URL** | `https://giusscos.com/trackco2/support` |
| **Marketing URL** | `https://giusscos.com/trackco2` |
| **Privacy Policy URL** | `https://giusscos.com/trackco2/privacy` |

---

## Categories

| | Category |
|---|---|
| **Primary** | Health & Fitness |
| **Secondary** | Lifestyle |

---

## In-App Purchases & Subscriptions

In App Store Connect unter Abonnements / In-App-Käufe → [Produkt] → [Sprache] eintragen.

### Abonnementgruppe: Claud+

| Feld | Wert |
|---|---|
| **Referenzname** | Claud+ |
| **Anzeigename** | Claud+ |
| **Beschreibung** | Premium-Zugang zu Claud CO2 |

### Abonnements

| Produkt-ID | Referenz | Anzeigename | Beschreibung |
|---|---|---|---|
| `fp_499_1w` | Claud+ Weekly | Claud+ | Unbegrenzter Zugang für diese Woche |
| `fp_1999_1y_1w` | Claud+ Yearly | Claud+ | Unbegrenzter Zugang für dieses Jahr |

### Lifetime-Käufe (nicht verbrauchbar)

| Produkt-ID | Referenz | Anzeigename | Beschreibung |
|---|---|---|---|
| `com.giusscos.footprintLifetime` | Claud CO2 Lifetime | Lifetime-Zugang | Unbegrenzter Lifetime-Zugang |
| `com.giusscos.footprintFamilyLifetime` | Claud CO2 Family Lifetime | Familien-Lifetime-Zugang | Lifetime-Zugang für die ganze Familie |

---

## Screenshots

See [screenshots.md](./screenshots.md) for device sizes and capture instructions.

### Suggested caption overlays

| # | Screen | Caption |
|---|---|---|
| 1 | Übersicht | Dein CO₂ auf einen Blick |
| 2 | Aktivitäten | Jede **Klima-Entscheidung** erfassen |
| 3 | Reisen / Karte | Die **grünste** Route wählen |
| 4 | Tipps | **Tipps** aus deinen Daten |
| 5 | Wetter | **Gehen**, wenn es sich lohnt |

### How each screenshot should look

1. **Hero** — Claud-Maskottchen gesund (mint/grün), wöchentliches CO₂-Diagramm mit Daten, Wetterkarte sichtbar.
2. **Aktivitäten** — Liste mit Autofahrt, Zugfahrt, Gehen, Rindfleisch etc. und aktuellen Einträgen.
3. **Reisen** — Stadtkarte mit Route; Vergleichskarten für Gehen, Bus, Auto mit CO₂-Werten.
4. **Tipps** — Tipp-Karte mit kg-CO₂-Zahlen und konkreter Empfehlung.
5. **Wetter** — Karte „Großartige Zeit zum Gehen!“ bei klarem Himmel.

Capture on **iPhone 16 Pro Max** (1290×2796) with **German** system language.
